--- a/test-traficinfo.html
+++ b/test-traficinfo.html
@@ -2,6 +2,7 @@
 <head>
 <meta charset="utf-8"/>
 <title>test</title>
+<link rel="stylesheet" href="index.css">
 <meta property="og:title" content="test"/>
 <meta property="og:description" content=""/>
 <link rel="apple-touch-icon" href=""/>
@@ -23,6 +24,11 @@ window.onload = async function() {
 </script>
 </head>
 <body>
+<header>
+            <div class="header-left">
+                <img src="logo.png" alt="logo">
+            </div>
+        </header>
 
 <div id=test><div>
 
